// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleMetadata should match snapshot for News & International 1`] = `
<html>
  <head>
    <meta
      content="https://www.facebook.com/bbcnews"
      name="article:author"
    />
    <meta
      content="2018-01-01T13:00:00.000Z"
      name="article:modified_time"
    />
    <meta
      content="2018-01-01T12:01:00.000Z"
      name="article:published_time"
    />
    <meta
      content="Royal Wedding 2018"
      name="article:tag"
    />
    <meta
      content="Duchess of Sussex"
      name="article:tag"
    />
    <meta
      content="Queen Victoria"
      name="article:tag"
    />
  </head>
  <body>
    <div />
  </body>
</html>
`;

exports[`ArticleMetadata should match snapshot for Persian News & UK origin 1`] = `
<html>
  <head>
    <meta
      content="https://www.facebook.com/bbcnews"
      name="article:author"
    />
    <meta
      content="2018-01-01T13:00:00.000Z"
      name="article:modified_time"
    />
    <meta
      content="2018-01-01T12:01:00.000Z"
      name="article:published_time"
    />
  </head>
  <body>
    <div />
  </body>
</html>
`;
